feat: add power actions to the admin cmd
